Add opening time config

--- a/warp/templates/zone.html
+++ b/warp/templates/zone.html
@@ -171,7 +171,7 @@
 
                 <div class="zone_timeslider">
                     <div id="timeslider-min" class="timeslider-hint">12:00</div>
-                    <div id="timeslider" class="timeslider"></div>
+                    <div id="timeslider" class="timeslider" data-min="{{ config['BOOK_OPEN'] }}" data-max="{{ config['BOOK_CLOSE'] }}"></div>
                     <div id="timeslider-max" class="timeslider-hint">12:00</div>
                 </div>
             </div>
