Seat group overwrite
- ability to set a different group to seat in zones
- made to handle mixed zones (ie: floors with openspace, call pods and other resources than can be booked simultaneously)

--- a/warp/templates/zone_modify.html
+++ b/warp/templates/zone_modify.html
@@ -45,6 +45,10 @@
             <input id="seat_y" type="number" min="0">
             <label for="seat_y" class="TR">seatEdit.Y</label>
           </div>
+          <div class="input-field">
+            <input id="seat_group" type="number" min="0">
+            <label for="seat_group" class="TR">seatEdit.group</label>
+          </div>
           <div class="input-field center-align">
             <a class="waves-effect waves-light btn TR" id="seat_delete_btn">btn.Delete</a>
           </div>
