Allow booking an assigned seat in the upcoming 3 days
Fix assign seat

--- a/warp/templates/zone.html
+++ b/warp/templates/zone.html
@@ -16,6 +16,7 @@
         {% elif isZoneViewer %}
         window.warpGlobals.isZoneViewer = true;
         {% endif %}
+        window.warpGlobals.assignFreeTS = {{ assignFreeTS }};
 
     </script>
 
